--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gmd-readme",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Google Material Design Theme for your README.md files",
   "main": "index.js",
   "scripts": {
@@ -49,6 +49,7 @@
     "grunt-newer": "^1.1.0",
     "load-grunt-config": "^0.16.0",
     "load-grunt-tasks": "^3.1.0",
+    "marked": "^0.3.3",
     "node-bourbon": "^4.2.1-beta1",
     "time-grunt": "^1.1.0"
   },
